<resources>
    <string name="app_name">BebasProdi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="display_name">Name</string>
    <string name="email">Email</string>
    <string name="create_a_new_acount">Create a New Acount</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="company_name">Aplikasi Form Bebas Prodi</string>
    <string name="msg_permission_location">This feature need to access your current location. Allow now ?</string>
    <string name="msg_permission_contact">This feature need to access your contact. Allow now ?</string>
    <string name="msg_permission_camera">This feature need to access your camera and media storage. Allow now ?</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="maps_key">AIzaSyCMV4I_JjZ2RGqgsU98yg-gqwl4xf3fOs4</string>
</resources>
