<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Theme.Design.Light.NoActionBar"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorWhitemuda"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <!-- LoginActivity progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:text="@string/company_name"
                android:textSize="18sp"/>



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:singleLine="true"
                    android:textColorHint="@color/hitamflat"
                    android:textColorLink="@color/hitamflat"
                    android:textColorHighlight="@color/hitamflat"/>




                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/hitamflat"
                    />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Login"
                app:cornerRadius="18dp"
                app:elevation="2dp"
                app:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:textColor="@color/hitamflat"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/tvRegister"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum Punya Akun ?"
                    android:paddingTop="10dp"
                    android:layout_gravity="end"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:id="@+id/register"
                    android:text="Daftar Sebagai "
                    android:layout_marginStart="5dp"

                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Mahasiswa"
                    android:textStyle="bold"
                    android:id="@+id/petugas"
                    android:textColor="@color/hitamflat"
                    android:paddingTop="10dp"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="atau"/>
            <LinearLayout
                android:id="@+id/tvRegisterSupir"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:id="@+id/registerSupir"
                    android:text="Sebagai "
                    android:layout_marginStart="5dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DOSEN "
                    android:id="@+id/supir"
                    android:textStyle="bold"
                    android:textColor="@color/hitamflat"
                    android:paddingTop="10dp"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="______________"/>



            <LinearLayout
                android:id="@+id/tvforgotpassword"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Your"
                    android:paddingTop="5dp"
                    android:layout_gravity="end"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/hitamflat"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:text="password ?"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>