<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="#fcfcfc">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="220dp"
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:id="@+id/collapsing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="exitUntilCollapsed|snap"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:contentScrim="@color/colorPrimary"
            android:background="@drawable/image_2"
            app:title=""
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarid"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:layout_collapseMode="parallax">

            </androidx.appcompat.widget.Toolbar>


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/default_avatar"
                android:foregroundGravity="center"
                android:layout_gravity="center"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_collapseMode="parallax"
                android:layout_margin="4dp"
                app:civ_border_overlay="true"
                android:id="@+id/avatar"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_photo_camera"
                android:background="@color/hitamflat"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"
                android:layout_marginStart="45dp"
                android:layout_marginTop="35dp"
                android:id="@+id/btn_camera"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"

                android:layout_marginTop="8dp"
                android:text="@string/create_a_new_acount"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:hint="@string/display_name"
                android:id="@+id/reg_display_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                />

           <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="3dp"
                android:id="@+id/reg_nim"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:layout_marginTop="3dp"
                android:hint="Nomor Induk " />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="3dp"
                android:id="@+id/reg_no_hp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:layout_marginTop="3dp"
                android:hint="No Hp" />


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/reg_alamat"
                android:inputType="text"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="Alamat" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:id="@+id/reg_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:inputType="textPassword"
                    android:id="@+id/reg_password"
                    android:hint="password (8 karakter)"
                    android:maxLines="1"
                    android:singleLine="true"
                    />



                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:layout_marginLeft="8dp"
                    android:id="@+id/reg_kelas"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:drawableRight="@drawable/lock_open"
                    android:drawableTint="@color/black"
                    android:inputType="text"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="Pilih Kelas" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/regist_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginTop="64dp"
                android:text="@string/register"
                app:backgroundTint="@color/grey_800"
                android:layout_gravity="bottom|center_horizontal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
